
-- Note that we still use a Makefile for compilation

name:                jacky
version:             0.1.0.0
synopsis:            Twitter Client
-- description:         
homepage:            https://github.com/blitzcode/jacky/
license:             MIT
license-file:        LICENSE
author:              Tim C. Schroeder
maintainer:          tim@blitzcode.net
stability:           experimental
copyright:           (C) 2013 Tim C. Schroeder
category:            Web
build-type:          Make
extra-source-files:  README.md
cabal-version:       >=1.16
extra-tmp-files:     src/trace.log

source-repository head
  type:     git
  location: git://github.com/blitzcode/jacky.git

executable jacky
  main-is:          Main.hs
  hs-source-dirs:   src
  default-language: Haskell2010
  other-extensions:   OverloadedStrings
                    , ScopedTypeVariables
                    , FlexibleContexts
                    , PackageImports
                    , LambdaCase
                    , DeriveDataTypeable
                    , RecordWildCards
                    , RankNTypes
                    , NamedFieldPuns
  build-depends:      base                 >=4.6
                    , containers           >=0.5
                    , attoparsec           >=0.10
                    , bytestring           >=0.10
                    , transformers         >=0.3
                    , mtl                  >=2.1
                    , OpenGL               >=2.8
                    , GLFW-b               >=1.4.1
                    , stm                  >=2.4
                    , async                >=2.0
                    , network              >=2.4
                    , vector               >=0.10
                    , directory            >=1.2
                    , filepath             >=1.3
                    , conduit              >=1.0
                    , http-conduit         >=1.9
                    , JuicyPixels          >=3.1.1.1
                    , authenticate-oauth   >=1.4
                    , attoparsec-conduit   >=1.0
                    , aeson                >=0.6
                    , OpenGLRaw            >=1.3
                    , time                 >=1.4
                    , ansi-terminal        >=0.6
                    , text                 >=0.11
                    , unordered-containers >=0.2
                    , old-locale           >=1.0

