
-- Note that we still use a Makefile for compilation

name:                jacky
version:             0.1.0.0
synopsis:            Twitter Client
-- description:         
homepage:            https://github.com/blitzcode/jacky/
license:             MIT
license-file:        LICENSE
author:              Tim C. Schroeder
maintainer:          tim@blitzcode.net
stability:           experimental
copyright:           (C) 2013 Tim C. Schroeder
category:            Web
-- TODO: We abuse the configure script to build FT2
build-type:          Configure
extra-source-files:  README.md
cabal-version:       >=1.16
extra-tmp-files:     src/trace.log

source-repository head
  type:     git
  location: git://github.com/blitzcode/jacky.git

executable jacky
  main-is:          Main.hs
  hs-source-dirs:   src

  ghc-options:      -Wall -rtsopts -with-rtsopts=-T -H512m -O2 -threaded
  ghc-prof-options: -fprof-auto -caf-all

  c-sources:        src/ft2_interface.c
  include-dirs:     src/freetype2/include/
  cc-options:       -std=c99 -g -O3 -mtune=native -Wall -Wextra -Wno-unused-parameter

  -- TODO: We could get rid of the first three libraries by configuring FT2 to build without them
  -- TODO: We're currently loading the FT2 dylib, link statically
  extra-libraries: z bz2 png12 freetype
  extra-lib-dirs: /usr/X11/lib src/freetype2/objs/.libs/

  default-language: Haskell2010
  other-extensions:   OverloadedStrings
                    , ScopedTypeVariables
                    , FlexibleContexts
                    , PackageImports
                    , LambdaCase
                    , DeriveDataTypeable
                    , RecordWildCards
                    , RankNTypes
                    , NamedFieldPuns
  build-depends:      base                 >=4.6
                    , containers           >=0.5
                    , attoparsec           >=0.10
                    , bytestring           >=0.10
                    , transformers         >=0.3
                    , mtl                  >=2.1
                    , OpenGL               >=2.8
                    , GLFW-b               >=1.4.1
                    , stm                  >=2.4
                    , async                >=2.0
                    , network              >=2.4
                    , vector               >=0.10
                    , directory            >=1.2
                    , filepath             >=1.3
                    , conduit              >=1.0.9.3
                    , http-conduit         >=2.0.0.1
                    -- We don't use http-client directly (only through conduit), but we
                    -- need to make sure we have at least this version due to this bug
                    -- https://github.com/snoyberg/http-client/issues/9
                    , http-client          >=0.2.0.2
                    , JuicyPixels          >=3.1.1.1
                    , authenticate-oauth   >=1.4.0.8
                    , attoparsec-conduit   >=1.0
                    , aeson                >=0.6
                    , OpenGLRaw            >=1.3
                    , time                 >=1.4
                    , ansi-terminal        >=0.6
                    , text                 >=0.11
                    , unordered-containers >=0.2
                    , old-locale           >=1.0
                    , deepseq              >=1.3.0.1
                    , hashable             >=1.1.2.5

