name:                jacky
version:             0.1.0.0
synopsis:            Twitter Client
-- description:         
homepage:            https://github.com/blitzcode/jacky/
license:             MIT
license-file:        LICENSE
author:              Tim C. Schroeder
maintainer:          tim@blitzcode.net
stability:           experimental
copyright:           (C) 2016 Tim C. Schroeder
category:            Web
-- TODO: We abuse the configure script to build FT2
build-type:          Configure
extra-source-files:  README.md
cabal-version:       >=1.16
extra-tmp-files:     src/trace.log

source-repository head
  type:     git
  location: git://github.com/blitzcode/jacky.git

executable jacky
  main-is:          Main.hs
  hs-source-dirs:   src

                    -- Build with -dynamic to reduce linke times
  ghc-options:      -Wall -rtsopts -with-rtsopts=-T -H512m -O2 -threaded -dynamic
  ghc-prof-options: -fprof-auto -caf-all

  c-sources:        src/ft2_interface.c
  include-dirs:     src/freetype2/include/
  cc-options:       -std=c99 -g -O3 -mtune=native -Wall -Wextra -Wno-unused-parameter

  -- FT2 static library and libs required by it
  -- TODO: We're currently loading the FT2 dylib, link statically
  extra-libraries: z bz2 freetype
  extra-lib-dirs: src/freetype2/objs/.libs/

  default-language: Haskell2010
  other-extensions:   OverloadedStrings
                    , ScopedTypeVariables
                    , FlexibleContexts
                    , PackageImports
                    , LambdaCase
                    , DeriveDataTypeable
                    , RecordWildCards
                    , RankNTypes
                    , ExistentialQuantification
                    , ViewPatterns
  build-depends:      base                 >=4.8
                    , containers           >=0.5
                    , attoparsec           >=0.10
                    , bytestring           >=0.10
                    , transformers         >=0.3
                    , mtl                  >=2.1
                    , OpenGL               >=2.9.1.0
                    , GLFW-b               >=1.4.1
                    , stm                  >=2.4
                    , async                >=2.0
                    , network              >=2.4
                    , vector               >=0.10
                    , directory            >=1.2
                    , filepath             >=1.3
                    , conduit              >=1.0.9.3
                    , http-conduit         >=2.0.0.1
                    -- We don't use http-client directly (only through conduit), but we
                    -- need to make sure we have at least this version due to this bug
                    -- https://github.com/snoyberg/http-client/issues/9
                    , http-client          >=0.2.0.2
                    , JuicyPixels          >=3.1.2
                    , authenticate-oauth   >=1.4.0.8
                    , resourcet            >=0.4.9
                    , conduit-extra        >=1.1.0
                    , aeson                >=0.6
                    , OpenGLRaw            >=3.0.0.0
                    , time                 >=1.4
                    , ansi-terminal        >=0.6
                    , text                 >=0.11
                    , unordered-containers >=0.2
                    , deepseq              >=1.3.0.1
                    , hashable             >=1.1.2.5
                    , monad-control        >=0.3.2.2
                    , network-uri

